compiler/snapshots/parse_simple_constructor_pattern.snap
---
source: compiler/src/syntax/mod.rs
description: None
expression: result
---
ConstructorPatternNode {
    constructor: "None",
    elements: [],
}
