compiler/snapshots/parse_simple_or_pattern.snap
---
source: compiler/src/syntax/mod.rs
description: x or y
expression: result
---
OrPatternNode {
    patterns: [
        VariablePatternNode {
            variable: "x",
        },
        VariablePatternNode {
            variable: "y",
        },
    ],
}
