compiler/snapshots/parse_variable_expression.snap
---
source: compiler/src/syntax/mod.rs
description: foo
expression: result
---
VariableExpressionNode {
    variable: "foo",
}
