compiler/snapshots/recursive-bounds.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling recursive-bounds.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:
Facts:
TypeDefinitionNode `Number` (compiler/tests/recursive-bounds.wipple:1:1-3:26)
  at compiler/tests/recursive-bounds.wipple:1:1-3:26
  has definition constraints
  has type Number
  is a definition
TypeDefinitionNode `String` (compiler/tests/recursive-bounds.wipple:4:1-4:26)
  at compiler/tests/recursive-bounds.wipple:4:1-4:26
  has definition constraints
  has type String
  is a definition
TypeParameterNode `value` (compiler/tests/recursive-bounds.wipple:5:21-5:26)
  at compiler/tests/recursive-bounds.wipple:5:21-5:26
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/recursive-bounds.wipple:5:21-5:26)
TypeDefinitionNode `Maybe` (compiler/tests/recursive-bounds.wipple:5:1-5:34)
  at compiler/tests/recursive-bounds.wipple:5:1-5:34
  has definition constraints
  has type Maybe value
  has type parameters
  is a definition
TypeParameterNode `value` (compiler/tests/recursive-bounds.wipple:7:12-7:17)
  at compiler/tests/recursive-bounds.wipple:7:12-7:17
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/recursive-bounds.wipple:7:12-7:17)
TypeParameterNode `value` (compiler/tests/recursive-bounds.wipple:7:28-7:33)
  at compiler/tests/recursive-bounds.wipple:7:28-7:33
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/recursive-bounds.wipple:7:12-7:17)
NamedTypeNode `String` (compiler/tests/recursive-bounds.wipple:7:37-7:43)
  at compiler/tests/recursive-bounds.wipple:7:37-7:43
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/recursive-bounds.wipple:4:1-4:26)
FunctionTypeNode `value -> String` (compiler/tests/recursive-bounds.wipple:7:28-7:43)
  at compiler/tests/recursive-bounds.wipple:7:28-7:43
  has type value -> String
  is a type
TraitDefinitionNode `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
  at compiler/tests/recursive-bounds.wipple:7:1-7:44
  has definition constraints
  has instances
  has type parameters
  has type value -> String
  is a definition
NamedTypeNode `String` (compiler/tests/recursive-bounds.wipple:8:20-8:26)
  at compiler/tests/recursive-bounds.wipple:8:20-8:26
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/recursive-bounds.wipple:4:1-4:26)
BoundConstraintNode `Describe String` (compiler/tests/recursive-bounds.wipple:8:10-8:27)
  at compiler/tests/recursive-bounds.wipple:8:10-8:27
PlaceholderExpressionNode `_` (compiler/tests/recursive-bounds.wipple:8:30-8:31)
  at compiler/tests/recursive-bounds.wipple:8:30-8:31
  has type String -> String
  is an expression
InstanceDefinitionNode `instance (Describe String)` (compiler/tests/recursive-bounds.wipple:8:1-8:31)
  at compiler/tests/recursive-bounds.wipple:8:1-8:31
  has definition constraints
  has type String -> String
  is a definition
  resolved to 1 definition(s): `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
TypeParameterNode `value` (compiler/tests/recursive-bounds.wipple:9:27-9:32)
  at compiler/tests/recursive-bounds.wipple:9:27-9:32
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/recursive-bounds.wipple:9:27-9:32)
NamedTypeNode `Maybe value` (compiler/tests/recursive-bounds.wipple:9:21-9:32)
  at compiler/tests/recursive-bounds.wipple:9:21-9:32
  has type Maybe value
  is a type
  resolved to 1 definition(s): `Maybe` (compiler/tests/recursive-bounds.wipple:5:1-5:34)
BoundConstraintNode `Describe (Maybe value)` (compiler/tests/recursive-bounds.wipple:9:10-9:34)
  at compiler/tests/recursive-bounds.wipple:9:10-9:34
TypeParameterNode `value` (compiler/tests/recursive-bounds.wipple:9:51-9:56)
  at compiler/tests/recursive-bounds.wipple:9:51-9:56
  has type value
  is a type
  resolved to 1 definition(s): `value` (compiler/tests/recursive-bounds.wipple:9:27-9:32)
BoundConstraintNode `Describe value` (compiler/tests/recursive-bounds.wipple:9:41-9:57)
  at compiler/tests/recursive-bounds.wipple:9:41-9:57
  is a constraint
  resolved to 1 definition(s): `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
PlaceholderExpressionNode `_` (compiler/tests/recursive-bounds.wipple:9:60-9:61)
  at compiler/tests/recursive-bounds.wipple:9:60-9:61
  has type (Maybe value) -> String
  is an expression
InstanceDefinitionNode `instance (Describe (Maybe value))` (compiler/tests/recursive-bounds.wipple:9:1-9:61)
  at compiler/tests/recursive-bounds.wipple:9:1-9:61
  has definition constraints
  has type (Maybe value) -> String
  has type parameters
  is a definition
  resolved to 1 definition(s): `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
NamedTypeNode `String` (compiler/tests/recursive-bounds.wipple:11:22-11:28)
  at compiler/tests/recursive-bounds.wipple:11:22-11:28
  has type String
  is a type
  resolved to 1 definition(s): `String` (compiler/tests/recursive-bounds.wipple:4:1-4:26)
NamedTypeNode `Maybe String` (compiler/tests/recursive-bounds.wipple:11:16-11:28)
  at compiler/tests/recursive-bounds.wipple:11:16-11:28
  has type Maybe String
  is a type
  resolved to 1 definition(s): `Maybe` (compiler/tests/recursive-bounds.wipple:5:1-5:34)
ConstructorExpressionNode `Describe` (compiler/tests/recursive-bounds.wipple:11:1-11:9)
  at compiler/tests/recursive-bounds.wipple:11:1-11:9
  has bound(s) Describe (Maybe String) (`instance (Describe (Maybe value))` (compiler/tests/recursive-bounds.wipple:9:1-9:61)), Describe String (`instance (Describe String)` (compiler/tests/recursive-bounds.wipple:8:1-8:31))
  has type (Maybe String) -> String
  is an expression
  resolved to 1 definition(s): `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
PlaceholderExpressionNode `_` (compiler/tests/recursive-bounds.wipple:11:11-11:12)
  at compiler/tests/recursive-bounds.wipple:11:11-11:12
  has type Maybe String
  is an expression
AnnotateExpressionNode `_ :: Maybe String` (compiler/tests/recursive-bounds.wipple:11:11-11:28)
  at compiler/tests/recursive-bounds.wipple:11:11-11:28
  has type Maybe String
  is an expression
CallExpressionNode `Describe (_ :: Maybe String)` (compiler/tests/recursive-bounds.wipple:11:1-11:29)
  at compiler/tests/recursive-bounds.wipple:11:1-11:29
  has type String
  is an expression
NamedTypeNode `Number` (compiler/tests/recursive-bounds.wipple:12:22-12:28)
  at compiler/tests/recursive-bounds.wipple:12:22-12:28
  has type Number
  is a type
  resolved to 1 definition(s): `Number` (compiler/tests/recursive-bounds.wipple:1:1-3:26)
NamedTypeNode `Maybe Number` (compiler/tests/recursive-bounds.wipple:12:16-12:28)
  at compiler/tests/recursive-bounds.wipple:12:16-12:28
  has type Maybe Number
  is a type
  resolved to 1 definition(s): `Maybe` (compiler/tests/recursive-bounds.wipple:5:1-5:34)
ConstructorExpressionNode `Describe` (compiler/tests/recursive-bounds.wipple:12:1-12:9)
  at compiler/tests/recursive-bounds.wipple:12:1-12:9
  has bound(s) Describe (Maybe Number) (`instance (Describe (Maybe value))` (compiler/tests/recursive-bounds.wipple:9:1-9:61)), Describe Number (unresolved)
  has type (Maybe Number) -> String
  is an expression
  resolved to 1 definition(s): `Describe : value => trait (value -> String)` (compiler/tests/recursive-bounds.wipple:7:1-7:44)
PlaceholderExpressionNode `_` (compiler/tests/recursive-bounds.wipple:12:11-12:12)
  at compiler/tests/recursive-bounds.wipple:12:11-12:12
  has type Maybe Number
  is an expression
AnnotateExpressionNode `_ :: Maybe Number` (compiler/tests/recursive-bounds.wipple:12:11-12:28)
  at compiler/tests/recursive-bounds.wipple:12:11-12:28
  has type Maybe Number
  is an expression
CallExpressionNode `Describe (_ :: Maybe Number)` (compiler/tests/recursive-bounds.wipple:12:1-12:29)
  at compiler/tests/recursive-bounds.wipple:12:1-12:29
  has type String
  is an expression


Feedback:

`Describe` (compiler/tests/recursive-bounds.wipple:12:1-12:9) (unresolved-bound):

  `Describe` (compiler/tests/recursive-bounds.wipple:12:1-12:9) requires the instance Describe Number, but this instance isn't defined.

  Double-check that these types are correct.
