compiler/snapshots/recursive-instance.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling recursive-instance.wipple... done

stdout:
Some Some 42
