compiler/snapshots/remove-duplicates.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling remove-duplicates.wipple... done

stdout:
5
4
3
2
1
