compiler/snapshots/repeat-missing-times.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling repeat-missing-times.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`repeat` (compiler/tests/repeat-missing-times.wipple:3:1-3:7) (error-instance):

  Missing `times` after   `5` (compiler/tests/repeat-missing-times.wipple:3:8-3:9).

 Try rewriting this code as `(  `5` (compiler/tests/repeat-missing-times.wipple:3:8-3:9) times)`, or double-check your parentheses.
