compiler/snapshots/repeat.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling repeat.wipple... done

stdout:
Hello, world!
Hello, world!
Hello, world!
Hello, world!
