compiler/snapshots/set.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling set.wipple... done

stdout:
True
True
True
False
